Add metrics selector component
