# ui/openapi.json
@@ -271,6 +271,10 @@
             "title": "Description",
             "type": "string"
           },
+          "display_name": {
+            "title": "Display Name",
+            "type": "string"
+          },
           "key": {
             "title": "Key",
             "type": "string"
@@ -281,6 +285,7 @@
         },
         "required": [
           "key",
+          "display_name",
           "description",
           "scope",
           "author"
